# s2s

./: .gitignore  CMakeLists.txt  README.md  UserGuide.md  for_presentation.cpp  struct_cast.hpp
archive/: out
doc/: next_steps  temp  todos.md
doc/design_snippets/: bitwise_memstream.hpp
doc/study_archive/: bench_foreign_reads.cpp  test_foreign_read.cpp
include/: address_manip.hpp  algorithms.hpp  bytes.hpp  cast.hpp  cast_error.hpp  cast_impl.hpp  clause.hpp  computation_from_fields.hpp  compute_res.hpp  containers.hpp  error.hpp  field.hpp  field_accessor.hpp  field_base.hpp  field_constraints.hpp  field_descriptors.hpp  field_list.hpp  field_list_base.hpp  field_list_metadata.hpp  field_list_metafunctions.hpp  field_list_traits.hpp  field_lookup.hpp  field_meta.hpp  field_metafunctions.hpp  field_node.hpp  field_reader.hpp  field_size.hpp  field_size_deduce.hpp  field_traits.hpp  field_type_info.hpp  field_types.hpp  field_value_constraints.hpp  field_value_constraints_traits.hpp  fixed_str_list.hpp  fixed_string.hpp  fixed_string_list.hpp  list.hpp  match_case.hpp  mp.hpp  pipeline.hpp  (+26 more)
include/api/: cast_impl.hpp  field_descriptors.hpp  struct_cast.hpp  struct_field_list.hpp
include/cast/: struct_cast_impl.hpp
include/endianness/: endian_read.hpp  test_endian_read.cpp
include/error/: cast_error.hpp
include/field/: field.hpp  field_accessor.hpp  field_metafunctions.hpp  field_traits.hpp  field_type_info.hpp
include/field_compute/: computation_from_fields.hpp  computation_from_fields_impl.hpp  computation_from_fields_traits.hpp
include/field_list/: field_list.hpp  field_list_lookup.hpp  field_list_metadata.hpp  field_list_traits.hpp
include/field_read/: field_reader.hpp  read_impl.hpp  stream_wrapper_impl.hpp
include/field_size/: comptime_field_size_deduce.hpp  field_size.hpp  field_size_deduce.hpp
include/field_validation/: field_value_constraints.hpp
include/lib/algorithms/: algorithms.hpp
include/lib/containers/: static_array.hpp  static_map.hpp  static_optional.hpp  static_set.hpp  static_vector.hpp
include/lib/memory/: address_manip.hpp  bit.hpp
include/lib/metaprog/: fixed_string_list.hpp  typelist.hpp  typelist_manip.hpp
include/lib/s2s_traits/: type_traits.hpp
include/memstream/: stream.hpp
include/migration/: address_manip.hpp  bytes.hpp  cast.hpp  clause.hpp  compute_res.hpp  field.hpp  field_accessor.hpp  field_list.hpp  field_lookup.hpp  field_reader.hpp  field_size.hpp  field_traits.hpp  field_types.hpp  fixed_str_list.hpp  match_case.hpp  sc_type_traits.hpp  struct_field_list_base.hpp  temp  type_deduction.hpp  type_ladder.hpp  type_switch.hpp  type_tag.hpp  typelist_manip.hpp
include/stream/: stream_traits.hpp
include/type_deduction/: type_deduction.hpp  type_deduction_clause.hpp  type_deduction_clause_traits.hpp  type_deduction_helper.hpp  type_deduction_impl.hpp  type_deduction_ladder.hpp  type_deduction_ladder_impl.hpp  type_deduction_ladder_traits.hpp  type_deduction_match_case.hpp  type_deduction_match_case_traits.hpp  type_deduction_metafunctions.hpp  type_deduction_switch.hpp  type_deduction_switch_impl.hpp  type_deduction_switch_traits.hpp  type_deduction_tags.hpp  type_deduction_traits.hpp
include/type_deduction/if_else_ladder/: clause.hpp  clause_traits.hpp  ladder.hpp  ladder_impl.hpp  ladder_traits.hpp
include/type_deduction/switch/: match_case.hpp  match_case_traits.hpp  switch.hpp  switch_impl.hpp  switch_traits.hpp
include/type_deduction/type/: type.hpp  type_deduction_metafunctions.hpp  type_deduction_traits.hpp  type_impl.hpp
include/type_deduction/utils/: helper.hpp  type_tags.hpp
scripts/: amalgam.py
single_header/: s2s.hpp  struct_cast.hpp
test/: CMakeLists.txt  bench_bulk_read.cpp  bench_foreign_reads.cpp  bench_no_bulk_read.cpp  bench_read_vs_iterator.cpp  benchmark.cpp  constexpr_memstream.hpp  endian  hello_s2s.cpp  s2s_test_utils.hpp  static_tests.cpp  static_tests.hpp  test_constexpr_read.cpp  test_container.cpp  test_endian_read.cpp  test_foreign_read.cpp  test_metadata.cpp  test_s2s_arr_of_recs_fields.cpp  test_s2s_comptime.cpp  test_s2s_computation_from_fields.cpp  test_s2s_field_validators.cpp  test_s2s_fixed_buffer_fields.cpp  test_s2s_magic_fields.cpp  test_s2s_optional_fields.cpp  test_s2s_trivial_fields.cpp  test_s2s_union_fields.cpp  test_s2s_variable_buffer_fields.cpp  test_s2s_vec_of_recs_fields.cpp  test_struct_cast.cpp  test_temp.cpp  test_utils.hpp
test/constexpr/: constexpr_read.cpp  field_list_metadata.cpp  static_tests_1.cpp
test/hello/: hello_s2s.cpp
test/runtime/: CMakeLists.txt  arr_of_recs_fields.cpp  computation_from_fields.cpp  field_validators.cpp  fixed_buffer_fields.cpp  magic_fields.cpp  optional_fields.cpp  trivial_fields.cpp  union_fields.cpp  variable_buffer_fields.cpp  vec_of_recs_fields.cpp
test/utils/: constexpr_memstream.hpp  s2s_test_utils.hpp
